fix: selection text color is now white to be readable

--- a/calc@ptandler/files/calc@ptandler/stylesheet.css
+++ b/calc@ptandler/files/calc@ptandler/stylesheet.css
@@ -30,6 +30,9 @@
 .input {
     font-weight: normal;
 }
+.current.input {
+    selected-color: white;
+}
 
 .result {
     font-weight: bold;
